--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,80 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root{
+  --primary: #d81e5b;
+  --secondary: #8c38ff;
+  --dark: grey;
+  --light:  white;
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  
+}
+body{
+  background-color: var(--light);
+
+}
+.App{
+  display: flex;
+  min-height: 100vh;
+align-items: center;
+justify-content: center;
+padding: 16px;
+
+}
+.calculator{
+  width: 100%;
+  max-width: 400px;
+  background-color: #FFF;
+  border-radius: 16px;
+  overflow: hidden;
+}
+.display{
+  padding: 16px;
+  text-align: center;
+  background-color: var(--dark);
+  color:var(--light);
+  font-size: 30px;
+  font-weight: 500;
+}
+.display span{
+  font-size: 14px;
+  color: #888;
+}
+button{
+  appearance: none;
+  border: none;
+  font-size: 20px;
+  color: blue;
+  padding: 16px;
+  
+  cursor: pointer;
+  
+
+}
+button:hover{
+  opacity: 0.9;
+
+
+}
+.operators{
+  display: flex;
+}
+.operators button{
+  flex: 1 1 0%;
+  background-color: var(--primary);
+  font-weight: 700;
+
+}
+.diigits{
+  display: flex;
+  flex-wrap: wrap;
+
+}
+.diigits button{
+  flex: 1 1 33.333%;
+  max-width: 33.333%;
+  background-color: var(--dark);
 }
